# shredit

./: .env  README.md  config-storage  docker-compose.yaml
api/: Dockerfile  application_default_credentials.json  pyproject.toml
api/src/api/: api.py  cli.py
api/src/api/blob/: aws.py
api/src/api/db/: models.py  pool.py
api/src/api/exceptions/: __init__.py  auth0.py
api/src/api/middleware/: __init__.py  auth0.py  cache.py  db.py  exceptions.py
api/src/api/routers/: base.py  chat.py  file.py  gql.py  llm.py  payment.py  user.py  workflow.py  workflows.py
api/src/api/utils/: auth0.py  gql.py  logger.py  settings.py
api/src/api/utils/blob/: __init__.py  aws.py  azure.py  base.py  gcp.py
api/src/api/utils/compute/: __init__.py  aws.py  base.py  docker.py
api/src/api/utils/idp/: __init__.py  auth0.py  base.py
api/src/api/utils/llm/: base.py
api/src/api/utils/llm/agents/: __init__.py  base.py  main_agent.py
api/src/api/utils/llm/chains/: SQLChain.py
api/src/api/utils/llm/config/: __init__.py
api/src/api/utils/llm/datasources/: __init__.py  base.py  postgres.py
api/src/api/utils/llm/prompts/: classification.py  sql_based_response.py  sql_generation.py
api/src/api/utils/llm/router/: base.py  classification.py
api/src/api/utils/payment/: __init__.py  base.py  stripe.py
web/: Dockerfile  package.json
web/app/: layout.jsx
web/app/api/auth/[auth0]/: route.js
web/app/api/chats/: route.js
web/app/api/chats/create/: route.js
web/app/api/files/: route.js
web/app/api/llm/: route.js
web/app/api/llm/[id]/: route.js
web/app/api/shows/: route.js
web/app/api/workflows/: route.js
web/app/api/workflows/[id]/: route.js
web/app/api/workflows/[id]/messages/: route.js
web/app/api/workflows/instance/: route.js
web/app/chat/: page.jsx
web/app/csr/: page.jsx
web/app/llm/: page.jsx
web/app/ssr/: page.jsx
web/app/storage/: page.jsx
web/app/workflows/: page.jsx
web/components/: NavBar.jsx
