[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
fastapi = "^0.115.0"
jose = "^1.0.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
