[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["laurens <voogdlaurens@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.7"
fastapi = "^0.115.0"
jose = "^1.0.0"
httpx = "^0.27.2"
uvicorn = "^0.30.6"
ariadne = "^0.23.0"
sqlalchemy = "^2.0.35"
strawberry-graphql = "^0.242.0"
asyncpg = "^0.29.0"



[tool.poetry.scripts]
api = "api.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
